--- a/senegal2024.html
+++ b/senegal2024.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Senegal 2024</title>
+    <title>Kenya, Nairobi 2024</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,300" rel="stylesheet" type="text/css">
@@ -30,18 +30,18 @@
     
     <!-- Main -->
     <div id="content50">
-        <h1>Senegal Cropland Mapping Training 2024</h1>
+        <h1>Kenya Crop Yield Forecast Training 2026</h1>
         <a href="#schedule">Schedule</a>
         &nbsp;|&nbsp;
-        <a href="#project">Mapping Project</a>
+        <a href="#project">Forecasting Project</a>
         &nbsp;|&nbsp;
-        <a href="#helmets">Helmets Labeling Crops</a>
+        <a href="#helmets">TBD</a>
         &nbsp;|&nbsp;
         <a href="#resources">Resources</a>
         <br>
         <br>
         <strong>
-            Dates: June 3-7, 2024
+            Dates: Feb/Mar, 2026
         </strong>
         <br>
         <br>
@@ -61,12 +61,11 @@
         <strong>Team</strong>
         <ul>
             <li>Catherine Nakalembe, PI, University of Maryland (UMD)</li>
-            <li>Ivan Zvonkov, UMD</li>
-            <li>Hannah Kerner, Arizona State University</li>
-            <li>Adebowale Daniel, UMD</li>
+            <li>Pradeep Kumar Yellapu</li>
+            <li>Matthew Olawale Oke</li>
+            <li>Monica Adjei, UMD</li>
             <li>Diana Frimpong, UMD</li>
-            <li>Alana Ginsburg, UMD</li>
-            <li>Kevin Horn, NASA/SCO</li>
+            <li>Adebowale Daniel, UMD</li>
         </ul>
         
 
@@ -78,14 +77,14 @@
                     style="max-height: 5em;"/>
             </div>
             <div style="padding: 0px 48px">
-                <img src="assets/servir.png" style="max-height: 4.5em;"/>
+                <img src="assets/AGRA_Banner.png" style="max-height: 4.5em;"/>
             </div>
             <div class="column">
-                <img src="assets/cse.png" style="max-height: 4.5em;"/>
+                <img src="assets/XylemLab_logo.png" style="max-height: 4.5em;"/>
             </div>
         </div> 
 
-        <h1 id="schedule">Schedule: June 3-7, 2024</h1>
+        <h1 id="schedule">Schedule: TBD 1-15, 2026</h1>
         <iframe 
             width="100%"
             height="620"
