--- a/kenya2026.html
+++ b/kenya2026.html
@@ -76,7 +76,7 @@
                     src="assets/umd-logo.png" 
                     style="max-height: 3.5em;"/>
             </div>
-            <div style="padding: 0px 48px">
+            <div style="padding:">
                 <img src="assets/AGRA_Banner.png" style="max-height: 5.5em;"/>
             </div>
             <div class="column">
