--- a/kenya2026.html
+++ b/kenya2026.html
@@ -71,16 +71,16 @@
 
 
         <div id="partners">
+            <div>
+                <img src="assets/AGRA_Banner.png" style="max-height: 6.5em;"/>
+            </div>
             <div class="column">
                 <img 
                     src="assets/umd-logo.png" 
                     style="max-height: 3.5em;"/>
             </div>
             <div class="column">
-                <img src="assets/XylemLab_logo.png" style="max-height: 3.5em;"/>
-            </div>
-            <div style="padding:">
-                <img src="assets/AGRA_Banner.png" style="max-height: 5.5em;"/>
+                <img src="assets/XylemLab_logo.png" style="max-height: 2.5em;"/>
             </div>
         </div> 
 
