--- a/kenya2026.html
+++ b/kenya2026.html
@@ -76,11 +76,10 @@
             </div>
             <div class="column">
                 <img 
-                    src="assets/umd-logo.png" 
-                    style="max-height: 3.5em;"/>
+                    src="assets/umd-logo.png" style="max-height: 3.5em;"/>
             </div>
             <div class="column">
-                <img src="assets/XylemLab_logo.png" style="max-height: 2.5em;"/>
+                <img src="assets/XylemLab_logo.png" style="max-height: 3em;"/>
             </div>
         </div> 
 
@@ -91,7 +90,7 @@
             src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT72ONd1c1KltsDgI7Nn66zOGf0QlM3WU7fcNX6OtJ9FJZ7JGcbIrNSQhFXFk0uO1AREoQuXW_BBBsx/pubhtml?gid=1720718218&amp;single=true&amp;widget=true&amp;headers=false">
         </iframe>
         
-        <h1 id="project">Cropland Mapping Project</h1>
+        <h1 id="project">Crop Yield Forecast Project</h1>
         
         <a href="https://code.earthengine.google.com/?accept_repo=users/izvonkov/crop-mapping-senegal">Google Earth Engine Repository containing all relevant scripts</a>
         <br/><br/>
