--- a/kenya2026.html
+++ b/kenya2026.html
@@ -87,7 +87,7 @@
         <iframe 
             width="100%"
             height="620"
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT72ONd1c1KltsDgI7Nn66zOGf0QlM3WU7fcNX6OtJ9FJZ7JGcbIrNSQhFXFk0uO1AREoQuXW_BBBsx/pubhtml?gid=1720718218&amp;single=true&amp;widget=true&amp;headers=false">
+            src="https://docs.google.com/spreadsheets/d/1SepyA5gB9LGneUzWmdSd17qP-A3H5x4U/edit?gid=1687680449#gid=1687680449;single=true&amp;widget=true&amp;headers=false">
         </iframe>
         
         <h1 id="project">Crop Yield Forecast Project</h1>
