--- a/kenya2026.html
+++ b/kenya2026.html
@@ -87,7 +87,7 @@
         <iframe 
             width="100%"
             height="620"
-            src="https://docs.google.com/spreadsheets/d/1SepyA5gB9LGneUzWmdSd17qP-A3H5x4U/edit?gid=1687680449#gid=1687680449;single=true&amp;widget=true&amp;headers=false">
+            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlM4N5FLj-hqqROAgoxaWBoakDqNe3yAKegPbmWdI50WmlKYq5Q6zI9U3WSnS3SQ/pubhtml?gid=1687680449&single=true;headers=false">
         </iframe>
         
         <h1 id="project">Crop Yield Forecast Project</h1>
