--- a/kenya2026.html
+++ b/kenya2026.html
@@ -87,7 +87,7 @@
         <iframe 
             width="100%"
             height="620"
-            src="<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlM4N5FLj-hqqROAgoxaWBoakDqNe3yAKegPbmWdI50WmlKYq5Q6zI9U3WSnS3SQ/pubhtml?widget=true&amp;headers=false">
+            src="<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlM4N5FLj-hqqROAgoxaWBoakDqNe3yAKegPbmWdI50WmlKYq5Q6zI9U3WSnS3SQ/pubhtml?widget=true&amp;headers=false"></iframe>
         </iframe>
         
         <h1 id="project">Crop Yield Forecast Project</h1>
